<resources>
    <string name="app_name">NutriTrack</string>
    <string name="nutritrack_logo">NutriTrack Logo</string>
    <string name="create_account">Create an Account</string>
    <string name="login">Login</string>
    <string name="personalize">Personalize</string>
    <string name="txtTermsAndConditions"><![CDATA["By continuing you agree to NutriTrack Terms & Conditions and Privacy Policy."]]></string>
    <string name="nutritrack_user_goal_question">What is your goal for using NutriTrack?</string>
    <string name="lose_fat">Lose some fat</string>
    <string name="maintain_body">Maintain my body</string>
    <string name="gain_muscle">Gain more weight</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="nutritrack_user_gender_question">What is your biological sex?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="txtTabLayoutContentDesc">Tab layout in Onboarding Activity</string>
    <string name="nutritrack_user_age_question">What is your date of birth?</string>
    <string name="nutritrack_user_height_question">What is your height?</string>
    <string name="nutritrack_user_weight_question">What is your weight?</string>


</resources>