<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Top Bar -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.1"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.9"
            android:fontFamily="@font/be_vietnam"
            android:paddingRight="50dp"
            android:text="@string/personalize"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imgViewGoalSelect"
        android:layout_width="395dp"
        android:layout_height="242dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/nutritrack_logo" />

    <TextView
        android:id="@+id/txtViewGoalQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgViewGoalSelect"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nutritrack_user_goal_question"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/goalOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewGoalQuestion"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoseFat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@drawable/outlined_rounded_button"
            android:fontFamily="@font/be_vietnam_bold"
            android:text="@string/lose_fat"
            android:textAllCaps="false"
            android:textColor="@color/primary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMaintain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/primary"
            android:fontFamily="@font/be_vietnam_bold"
            android:textAllCaps="false"
            android:background="@drawable/outlined_rounded_button"
            android:text="@string/maintain_body" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/primary"
            android:fontFamily="@font/be_vietnam_bold"
            android:textAllCaps="false"
            android:background="@drawable/outlined_rounded_button"
            android:text="@string/gain_muscle" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoalNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:fontFamily="@font/be_vietnam_bold"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button"
        android:text="@string/next" />

</RelativeLayout>